# MerkelBackup

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.recover  LICENSE  README.md  recover-entrypoint.sh  recover.sh  test.py
.github/workflows/: rust.yml
merkel_backup_plugin/: Cargo.toml
merkel_backup_plugin/src/: lib.rs
src/: dummy_server.rs  flush_db.rs  migrate.rs  offline_validate.rs  sbdiff.rs  sbpatch.rs
src/client/: backup.rs  main.rs  shared.rs  validate.rs  visit.rs
src/server/: config.rs  error.rs  handler.rs  main.rs  read_pool.rs  state.rs
