[package]
edition = "2021"

name = "mbackup"
version = "0.1.2"
authors = [ "Jakob Truelsen <jakob@scalgo.com>" ]

[[bin]]
name = "mbackupd"
path = "src/server/main.rs"

[[bin]]
name = "mbackup"
path = "src/client/main.rs"

[[bin]]
name = "dummy_server"
path = "src/dummy_server.rs"

[[bin]]
name = "offline_validate"
path = "src/offline_validate.rs"

[dependencies]
log = "0.4"
rusqlite = {version = "0.29", features = ["bundled"] }
rand = "0.8"
reqwest = {version = "0.11", features=["blocking", "rustls-tls"], default-features=false}
hex = "0.4"
clap = {version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
base64 = "0.21"
pbr = "1.0"
nix = "0.26"
libc = "0.2"
rust-lzma = "0.6"
itertools = "0.11"
hyper = {version="0.14", features =["http1", "runtime", "server"] }
tokio = {version="1", features = ["rt-multi-thread", "macros"]}
sd-notify = "0.4"
blake2 = "0.10"
chacha20 = "0.9"
digest = "0.10"
cipher = "0.4"
